src/main/java/by/bsuir/gen/StringGrammarParser.java
package by.bsuir.gen;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class StringGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, BEGIN=5, IF=6, PRINT=7, FOR=8, ELSE=9, 
		END=10, CONST=11, WHILE=12, INT=13, CHAR=14, ADD=15, REMOVE=16, STRING=17, 
		STRING_ARRAY=18, RETURN=19, CALL=20, GLOBAL=21, DOT=22, DOT_COMMA=23, 
		COLON=24, PLUS=25, MINUS=26, MULTIPLY=27, DIVIDE=28, NEGATION=29, EQUAL=30, 
		NON_EQUAL=31, LESS=32, LESS_OR_EQUALS=33, GREATER=34, GREATER_OR_EQUALS=35, 
		O_BRACKET=36, C_BRACKET=37, K_O_BRACKET=38, K_C_BRACKET=39, SQ_O_BRACKET=40, 
		SQ_C_BRACKET=41, LINE=42, NUMBER=43, SYMBOL=44, ID=45, WS=46;
	public static final int
		RULE_program = 0, RULE_block = 1, RULE_statement = 2, RULE_digit_expression = 3, 
		RULE_intialize_char = 4, RULE_initialize_string = 5, RULE_initialize_string_array = 6, 
		RULE_global_assign_var = 7, RULE_global_assign_string = 8, RULE_global_assign_string_array = 9, 
		RULE_print = 10, RULE_assign_var_method_invocation = 11, RULE_assign_string = 12, 
		RULE_assign_string_array = 13, RULE_assign_var = 14, RULE_operarions_with_string_array = 15, 
		RULE_operations = 16, RULE_simple_compare = 17, RULE_multi_compare = 18, 
		RULE_while_cicle = 19, RULE_if_else = 20, RULE_for_each = 21, RULE_type = 22, 
		RULE_type_1 = 23, RULE_signature = 24, RULE_subprogram_return = 25, RULE_subprogram_non_return = 26, 
		RULE_block_return = 27, RULE_block_non_return = 28, RULE_signature_method_invokation = 29, 
		RULE_method_invokation = 30, RULE_global_program = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "block", "statement", "digit_expression", "intialize_char", 
			"initialize_string", "initialize_string_array", "global_assign_var", 
			"global_assign_string", "global_assign_string_array", "print", "assign_var_method_invocation", 
			"assign_string", "assign_string_array", "assign_var", "operarions_with_string_array", 
			"operations", "simple_compare", "multi_compare", "while_cicle", "if_else", 
			"for_each", "type", "type_1", "signature", "subprogram_return", "subprogram_non_return", 
			"block_return", "block_non_return", "signature_method_invokation", "method_invokation", 
			"global_program"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'main_program'", "','", "'='", "'sub_program'", "'begin'", "'if'", 
			"'print'", "'for'", "'else'", "'end'", "'const'", "'while'", "'int'", 
			"'char'", "'add'", "'remove'", "'string'", "'stringArray'", "'return'", 
			"'call'", "'global'", "'.'", "';'", "':'", "'+'", "'-'", "'*'", "'/'", 
			"'!'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'('", "')'", "'{'", 
			"'}'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "BEGIN", "IF", "PRINT", "FOR", "ELSE", 
			"END", "CONST", "WHILE", "INT", "CHAR", "ADD", "REMOVE", "STRING", "STRING_ARRAY", 
			"RETURN", "CALL", "GLOBAL", "DOT", "DOT_COMMA", "COLON", "PLUS", "MINUS", 
			"MULTIPLY", "DIVIDE", "NEGATION", "EQUAL", "NON_EQUAL", "LESS", "LESS_OR_EQUALS", 
			"GREATER", "GREATER_OR_EQUALS", "O_BRACKET", "C_BRACKET", "K_O_BRACKET", 
			"K_C_BRACKET", "SQ_O_BRACKET", "SQ_C_BRACKET", "LINE", "NUMBER", "SYMBOL", 
			"ID", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AltString.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public StringGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StringGrammarListener) ((StringGrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StringGrammarListener) ((StringGrammarListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StringGrammarVisitor) return ((StringGrammarVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(T__0);
			setState(65);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(StringGrammarParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(StringGrammarParser.END, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StringGrammarListener) ((StringGrammarListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StringGrammarListener) ((StringGrammarListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StringGrammarVisitor) return ((StringGrammarVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(BEGIN);
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << PRINT) | (1L << FOR) | (1L << WHILE) | (1L << INT) | (1L << CHAR) | (1L << STRING) | (1L << STRING_ARRAY) | (1L << CALL) | (1L << ID))) != 0)) {
				{
				{
				setState(68);
				statement();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(74);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Assign_varContext assign_var() {
			return getRuleContext(Assign_varContext.class,0);
		}
		public Assign_stringContext assign_string() {
			return getRuleContext(Assign_stringContext.class,0);
		}
		public Assign_string_arrayContext assign_string_array() {
			return getRuleContext(Assign_string_arrayContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public OperationsContext operations() {
			return getRuleContext(OperationsContext.class,0);
		}
		public Operarions_with_string_arrayContext operarions_with_string_array() {
			return getRuleContext(Operarions_with_string_arrayContext.class,0);
		}
		public Assign_var_method_invocationContext assign_var_method_invocation() {
			return getRuleContext(Assign_var_method_invocationContext.class,0);
		}
		public While_cicleContext while_cicle() {
			return getRuleContext(While_cicleContext.class,0);
		}
		public If_elseContext if_else() {
			return getRuleContext(If_elseContext.class,0);
		}
		public Method_invokationContext method_invokation() {
			return getRuleContext(Method_invokationContext.class,0);
		}
		public For_eachContext for_each() {
			return getRuleContext(For_eachContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StringGrammarListener) ((StringGrammarListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StringGrammarListener) ((StringGrammarListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StringGrammarVisitor) return ((StringGrammarVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				assign_var();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				assign_string();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(78);
				assign_string_array();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(79);
				print();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(80);
				operations();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(81);
				operarions_with_string_array();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(82);
				assign_var_method_invocation();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(83);
				while_cicle();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(84);
				if_else();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(85);
				method_invokation();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(86);
				for_each();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Digit_expressionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(StringGrammarParser.ID, 0); }
		public TerminalNode O_BRACKET() { return getToken(StringGrammarParser.O_BRACKET, 0); }
		public List<Digit_expressionContext> digit_expression() {
			return getRuleContexts(Digit_expressionContext.class);
		}
		public Digit_expressionContext digit_expression(int i) {
			return getRuleContext(Digit_expressionContext.class,i);
		}
		public TerminalNode C_BRACKET() { return getToken(StringGrammarParser.C_BRACKET, 0); }
		public TerminalNode NUMBER() { return getToken(StringGrammarParser.NUMBER, 0); }
		public TerminalNode MULTIPLY() { return getToken(StringGrammarParser.MULTIPLY, 0); }
		public TerminalNode DIVIDE() { return getToken(StringGrammarParser.DIVIDE, 0); }
		public TerminalNode PLUS() { return getToken(StringGrammarParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(StringGrammarParser.MINUS, 0); }
		public Digit_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_digit_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StringGrammarListener) ((StringGrammarListener)listener).enterDigit_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StringGrammarListener) ((StringGrammarListener)listener).exitDigit_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StringGrammarVisitor) return ((StringGrammarVisitor<? extends T>)visitor).visitDigit_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Digit_expressionContext digit_expression() throws RecognitionException {
		return digit_expression(0);
	}

	private Digit_expressionContext digit_expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Digit_expressionContext _localctx = new Digit_expressionContext(_ctx, _parentState);
		Digit_expressionContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_digit_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(90);
				match(ID);
				}
				break;
			case O_BRACKET:
				{
				setState(91);
				match(O_BRACKET);
				setState(92);
				digit_expression(0);
				setState(93);
				match(C_BRACKET);
				}
				break;
			case NUMBER:
				{
				setState(95);
				match(NUMBER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(106);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(104);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						_localctx = new Digit_expressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_digit_expression);
						setState(98);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(99);
						_la = _input.LA(1);
						if ( !(_la==MULTIPLY || _la==DIVIDE) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(100);
						digit_expression(6);
						}
						break;
					case 2:
						{
						_localctx = new Digit_expressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_digit_expression);
						setState(101);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(102);
						_la = _input.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(103);
						digit_expression(5);
						}
						break;
					}
					} 
				}
				setState(108);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Intialize_charContext extends ParserRuleContext {
		public TerminalNode SYMBOL() { return getToken(StringGrammarParser.SYMBOL, 0); }
		public Intialize_charContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intialize_char; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StringGrammarListener) ((StringGrammarListener)listener).enterIntialize_char(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StringGrammarListener) ((StringGrammarListener)listener).exitIntialize_char(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StringGrammarVisitor) return ((StringGrammarVisitor<? extends T>)visitor).visitIntialize_char(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Intialize_charContext intialize_char() throws RecognitionException {
		Intialize_charContext _localctx = new Intialize_charContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_intialize_char);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(SYMBOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Initialize_stringContext extends ParserRuleContext {
		public TerminalNode LINE() { return getToken(StringGrammarParser.LINE, 0); }
		public List<TerminalNode> ID() { return getTokens(StringGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(StringGrammarParser.ID, i);
		}
		public TerminalNode MULTIPLY() { return getToken(StringGrammarParser.MULTIPLY, 0); }
		public TerminalNode DIVIDE() { return getToken(StringGrammarParser.DIVIDE, 0); }
		public TerminalNode PLUS() { return getToken(StringGrammarParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(StringGrammarParser.MINUS, 0); }
		public Initialize_stringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initialize_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StringGrammarListener) ((StringGrammarListener)listener).enterInitialize_string(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StringGrammarListener) ((StringGrammarListener)listener).exitInitialize_string(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StringGrammarVisitor) return ((StringGrammarVisitor<? extends T>)visitor).visitInitialize_string(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Initialize_stringContext initialize_string() throws RecognitionException {
		Initialize_stringContext _localctx = new Initialize_stringContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_initialize_string);
		int _la;
		try {
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LINE:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				match(LINE);
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(112);
				match(ID);
				setState(113);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUS) | (1L << MINUS) | (1L << MULTIPLY) | (1L << DIVIDE))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(114);
				match(ID);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Initialize_string_arrayContext extends ParserRuleContext {
		public TerminalNode SQ_O_BRACKET() { return getToken(StringGrammarParser.SQ_O_BRACKET, 0); }
		public TerminalNode SQ_C_BRACKET() { return getToken(StringGrammarParser.SQ_C_BRACKET, 0); }
		public List<TerminalNode> ID() { return getTokens(StringGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(StringGrammarParser.ID, i);
		}
		public Initialize_string_arrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initialize_string_array; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StringGrammarListener) ((StringGrammarListener)listener).enterInitialize_string_array(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StringGrammarListener) ((StringGrammarListener)listener).exitInitialize_string_array(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StringGrammarVisitor) return ((StringGrammarVisitor<? extends T>)visitor).visitInitialize_string_array(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Initialize_string_arrayContext initialize_string_array() throws RecognitionException {
		Initialize_string_arrayContext _localctx = new Initialize_string_arrayContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_initialize_string_array);
		try {
			int _alt;
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(117);
				match(SQ_O_BRACKET);
				setState(118);
				match(SQ_C_BRACKET);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(119);
				match(SQ_O_BRACKET);
				setState(124);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(120);
						match(ID);
						setState(121);
						match(T__1);
						}
						} 
					}
					setState(126);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				}
				setState(127);
				match(ID);
				setState(128);
				match(SQ_C_BRACKET);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Global_assign_varContext extends ParserRuleContext {
		public TerminalNode GLOBAL() { return getToken(StringGrammarParser.GLOBAL, 0); }
		public Assign_varContext assign_var() {
			return getRuleContext(Assign_varContext.class,0);
		}
		public Global_assign_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global_assign_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StringGrammarListener) ((StringGrammarListener)listener).enterGlobal_assign_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StringGrammarListener) ((StringGrammarListener)listener).exitGlobal_assign_var(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StringGrammarVisitor) return ((StringGrammarVisitor<? extends T>)visitor).visitGlobal_assign_var(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Global_assign_varContext global_assign_var() throws RecognitionException {
		Global_assign_varContext _localctx = new Global_assign_varContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_global_assign_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(GLOBAL);
			setState(132);
			assign_var();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Global_assign_stringContext extends ParserRuleContext {
		public TerminalNode GLOBAL() { return getToken(StringGrammarParser.GLOBAL, 0); }
		public Assign_stringContext assign_string() {
			return getRuleContext(Assign_stringContext.class,0);
		}
		public Global_assign_stringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global_assign_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StringGrammarListener) ((StringGrammarListener)listener).enterGlobal_assign_string(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StringGrammarListener) ((StringGrammarListener)listener).exitGlobal_assign_string(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StringGrammarVisitor) return ((StringGrammarVisitor<? extends T>)visitor).visitGlobal_assign_string(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Global_assign_stringContext global_assign_string() throws RecognitionException {
		Global_assign_stringContext _localctx = new Global_assign_stringContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_global_assign_string);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(GLOBAL);
			setState(135);
			assign_string();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Global_assign_string_arrayContext extends ParserRuleContext {
		public TerminalNode GLOBAL() { return getToken(StringGrammarParser.GLOBAL, 0); }
		public Assign_string_arrayContext assign_string_array() {
			return getRuleContext(Assign_string_arrayContext.class,0);
		}
		public Global_assign_string_arrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global_assign_string_array; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StringGrammarListener) ((StringGrammarListener)listener).enterGlobal_assign_string_array(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StringGrammarListener) ((StringGrammarListener)listener).exitGlobal_assign_string_array(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StringGrammarVisitor) return ((StringGrammarVisitor<? extends T>)visitor).visitGlobal_assign_string_array(this);
			else return visitor.visitChildren(this);
		}
	}
